# uniEsse3Api

./: LICENSE  pyproject.toml
src/uni_esse3api/: apps.py  permissions.py  routers.py  settings.py  uniEsse3Api.py  urls.py  utils.py
src/uni_esse3api/anagrafica_service_v2/: settings.py  views.py
src/uni_esse3api/carriere_service_v1/: serializers.py  settings.py  urls.py  views.py
src/uni_esse3api/management/commands/: create_esse3_groups.py
src/uni_esse3api/utenti_service_v1/: settings.py  urls.py  views.py
